--- a/springboot_demo_3_mvc/src/main/resources/templates/success.html
+++ b/springboot_demo_3_mvc/src/main/resources/templates/success.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SpringMVC入门案例</title>
+    <title></title>
 </head>
 <body>
-    <h1>Hello SpringMVC</h1>
+    <h1>提交成功!</h1>
 </body>
 </html>
