第一次上传

--- a/springboot_demo_3_mvc/src/main/resources/templates/user.html
+++ b/springboot_demo_3_mvc/src/main/resources/templates/user.html
@@ -29,6 +29,23 @@
                 <td>姓名:</td>
                 <td><input id="name" name="name" type="text"/></td>
             </tr>
+            <tr>
+                <td>宠物ID</td>
+                <td><input name="dog.id" type="text"/></td>
+            </tr>
+            <tr>
+                <td>宠物名称</td>
+                <td><input name="dog.name" type="text"/></td>
+            </tr>
+
+            <tr>
+                <td>爱好:</td>
+                <td>
+                    <input name="hobbys" type="checkbox" value="敲代码"/>敲代码
+                    <input name="hobbys" type="checkbox" value="敲键盘"/>敲键盘
+                    <input name="hobbys" type="checkbox" value="敲主机"/>敲主机
+                </td>
+            </tr>
 
 
             <tr>
