--- a/springboot_demo_4/src/main/resources/templates/userList.html
+++ b/springboot_demo_4/src/main/resources/templates/userList.html
@@ -6,6 +6,25 @@
     <title>用户列表数据</title>
 </head>
 <body>
+    <!--准备一个表格-->
+    <table border="1px" align="center" width="600px">
+        <tr>
+            <th colspan="4"><h3>用户列表</h3></th>
+        </tr>
+        <tr>
+            <th >ID</th>
+            <th >名称</td>
+            <th >年龄</th>
+            <th >性别</th>
+        </tr>
+        <tr align="center" th:each="user: ${userList}">
+            <td th:text="${user.id}"></td>
+            <td th:text="${user.name}">Tom</td>
+            <td th:text="${user.age}">10</td>
+            <td th:text="${user.sex}">男</td>
+        </tr>
 
+
+    </table>
 </body>
 </html>
