--- a/springboot_demo_4/src/main/resources/templates/userAjax.html
+++ b/springboot_demo_4/src/main/resources/templates/userAjax.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--准备一个表格-->
-    <table border="1px" align="center" width="600px">
+    <table id="userTable" border="1px" align="center" width="600px">
         <tr>
             <th colspan="4"><h3>用户列表</h3></th>
         </tr>
@@ -26,7 +26,81 @@
 		//1.jQuery 中有一种编程思想  函数式编程
 		$(function(){
 			//让整个页面加载完成之后再次执行,以后所有的操作都应该在函数内完成!!!
-			alert("aaaa")
+			/**
+			 * 常见的Ajax用法
+			 * 1.$.get(url地址,提交数据,回调函数,返回值类型)
+			 * 2.$.post()
+			 * 3.$.put()
+			 * 4.$.delete()
+			 */
+
+            /*
+            for循环的写法:
+            1.常规for循环
+            for (var i ; i<result.length;i++){
+                   var user = result[i];
+                   console.log(user)
+               }
+            2.增强for循环  in关键字
+            for(var index in result){
+                var user = result[index]
+            }
+
+            3.of 关键字
+            for(user of result){
+                console.log(user)
+            }
+            */
+			
+			/**
+			 * 业务需求:
+			 * 要求向后端服务器发起请求  /findAjaxUser  , 之后将返回值结果() 进行页面解析
+			 */
+			$.get("/findAjaxUser",function(result){
+                console.log(result)
+                //1.result是服务器返回的结果
+                //2.将返回值结果进行循环遍历
+                for( index in result){
+                    //3.获取对象的属性值
+                    var id = result[index].id;
+                    var age = result[index].age;
+                    var name = result[index].name;
+                    var sex = result[index].sex;
+                    var tr = "<tr align='center'><td>"+id+"</td><td>"+name+"</td><td>"+age+"</td><td>"+sex+"</td></tr>"
+                    //4.选中id = userTable 的元素    .append()  表示追加内容
+                    $("#userTable").append(tr);
+                }
+			})
+
+
+
+            /*
+            参数说明:
+            1.key = value & key2 = value2...
+                例如:id = 1&name = tom
+
+            2.js对象写法
+                语法:{key:value,key2:value2...}
+                例如: {id:1,name:"tom"}
+             */
+
+            //带参数的ajax请求  返回值都是json
+            // $.getJSON("/findAjaxUser",{id:1,name:"tom"},function (result){
+            //     alert("ajax请求成功!")
+            // })
+            // //最基本的ajax
+            // $.ajax({
+            //     type:"get",
+            //     url:"/findAjaxUser",
+            //     data:{id:1,name:"tom"},
+            //     success:function(result){
+            //         alert("ajax请求成功!")
+            //     },
+            //     error:function(result){
+            //         alert("ajax请求失败!")
+            //     }
+            // })
+
 			
 		})
 		
